<resources>
    <string name="app_name">UFood</string>
    <string name="Background">background_intro</string>
    <string name="unesco_logo">Unesco-Logo</string>
    <string name="foodOffer">Offer Food</string>
    <string name="FindFreeFood">Search Food</string>
    <string name="b_login">Login</string>
    <string name="b_register">Register</string>

    <!--    The Registration page-->
    <string name="Full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="phoneUser">Phone Number</string>
    <string name="profile">Profile_pic</string>
    <string name="user_type">User Type</string>
    <string name="user_type_list">User Type list</string>
    <string name="userprofile">Profile</string>

    <string-array name="usertype">
        <item>User</item>
        <item>Food-Offer</item>
    </string-array>
    <string name="update">Update Details</string>

<!--   offerFood Activity-->
    <string name="FoodType">Food Type</string>
    <string name="veg">VEG</string>
    <string name="nonVeg">NON-VEG</string>
    <string name="serving">Number of People Serving:</string>
    <string name="description">Description:</string>
    <string name="itemName">Item Name:</string>
    <string name="itemName1">Item Name:</string>
    <string name="Location">Food Location:</string>
    <string name="city">City:</string>
    <string name="Country">Country:</string>
    <string name="street">Street Name:</string>
    <string name="house">House No.:</string>
    <string name="landmark">Landmark:</string>
    <string name="pinCode">Pin Code:</string>
    <string name="post">Post</string>

<!--    Item-->
    <string name="delete">Delete</string>
    <string name="addItem">Item Add</string>
    <string name="foodItem">Enter Item</string>

</resources>