<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".OfferFoodActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


                <TextView
                    android:id="@+id/itemType"
                    android:layout_width="128dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/FoodType"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="171dp"
                    android:layout_height="79dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toEndOf="@+id/itemType"
                    app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/vegItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:buttonTint="@color/Blue"
                            android:text="@string/veg"
                            android:textSize="20sp"
                            tools:targetApi="lollipop" />

                        <RadioButton
                            android:id="@+id/nonVegItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:buttonTint="@color/Blue"
                            android:text="@string/nonVeg"
                            android:textSize="20sp"
                            tools:ignore="TouchTargetSizeCheck"
                            tools:targetApi="lollipop" />
                </RadioGroup>

                <EditText
                    android:id="@+id/noPeople"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="56dp"
                    android:ems="10"
                    android:hint="@string/serving"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.278"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noPeople" />

                <TextView
                    android:id="@+id/itemAdd"
                    android:layout_width="128dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/itemName"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:id="@+id/item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <ImageButton
                    android:id="@+id/addItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/itemName1"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_add_circle"
                    tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
                <TextView
                    android:id="@+id/location"
                    android:layout_width="225dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/Location"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noPeople" />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/Country"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noPeople" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/city"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/street"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

                <EditText
                    android:id="@+id/houseNo"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/house"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/street" />

                <EditText
                    android:id="@+id/landmark"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/landmark"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/houseNo" />

                <EditText
                    android:id="@+id/pin"
                    android:layout_width="377dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/pinCode"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#546E7A"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/landmark"
                    tools:ignore="TextFields" />


                <Button
                    android:id="@+id/post"
                    android:layout_width="206dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/button_design"
                    android:gravity="center"
                    android:text="@string/post"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.294"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pin"
                    tools:ignore="TextContrastCheck" />


        </LinearLayout>


</ScrollView>