<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile">

    <View
        android:id="@+id/view4"
        android:layout_width="418dp"
        android:layout_height="147dp"
        android:background="@color/Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="109dp"
        android:layout_height="115dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/userprofile"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_person_black" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="415dp"
        android:layout_height="325dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/userprofile"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintVertical_bias="0.132">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableLeft="@drawable/ic_baseline_person_black"
                android:drawablePadding="10dp"
                android:hint="@string/Full_name"
                android:inputType="textPersonName"
                android:textColor="@color/Black" />


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/Black" />

            <EditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/phoneUser"
                android:inputType="phone"
                android:textColor="@color/Black"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/Black"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawablePadding="10dp"
                android:hint="@string/user_type"
                android:inputType="text"
                android:textColor="@color/Black"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/update"
        android:layout_width="206dp"
        android:layout_height="59dp"
        android:background="@drawable/button_design"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.789"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>