<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="403dp"
        android:contentDescription="@string/Background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_intro"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:layout_width="198dp"
        android:layout_height="204dp"
        android:contentDescription="@string/unesco_logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.563"
        app:srcCompat="@drawable/unesco"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/Register"
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/button_offer_find"
        android:elevation="50dp"
        android:text="@string/foodOffer"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:layout_width="270dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:elevation="50dp"
        android:background="@drawable/button_offer_find"
        android:text="@string/FindFreeFood"
        android:textColor="#fff"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        tools:ignore="TextContrastCheck" />


</android.support.constraint.ConstraintLayout>